<resources>
    <string name="app_name">SalaryCounter</string>
    <string name="add">add</string>
    <string name="date">Date:</string>
    <string name="day">Day:</string>
    <string name="starting_time">Starting time:</string>
    <string name="end_time">End time:</string>
    <string name="cash_per_hour">Cash(per hour):</string>
    <string-array name="days_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
</resources>
