<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DialogFragment">

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"/>

    <EditText
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/day"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/startingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/starting_time"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <EditText
        android:id="@+id/endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_time"
        app:layout_constraintTop_toBottomOf="@+id/startingTime" />
    <EditText
        android:id="@+id/cashPerHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cash_per_hour"
        app:layout_constraintTop_toBottomOf="@+id/endTime" />

</android.support.constraint.ConstraintLayout>