<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/date"/>

    <EditText
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/day"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/startingTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/starting_time"
        app:layout_constraintTop_toBottomOf="@+id/day" />

    <EditText
        android:id="@+id/endTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/end_time"
        app:layout_constraintTop_toBottomOf="@+id/startingTime" />
    <EditText
        android:id="@+id/cashPerHour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cash_per_hour"
        app:layout_constraintTop_toBottomOf="@+id/endTime" />

  <!--  <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/cashPerHour"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

    </ListView>-->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintTop_toBottomOf="@+id/cashPerHour">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="addButtonOnClick"
        android:text="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>